Project internal_information_system_high_level {
  database_type: "MySQL"
  Note: "High-level pohlad aplikacie. Len hlavne moduly a vztah na users, bez sessions/permissions a bez low-level detailov."
}

TableGroup "User Module" {
  users
}

TableGroup "Project Module" {
  projects
  project_team
  tasks
}

TableGroup "TimeTracking Module" {
  time_entries
}

TableGroup "CapacityManagement Module" {
  employee_capacities
}

Table users {
  id bigint [pk, increment]
  name varchar
  email varchar

  Note: "Centralny uzivatel aplikacie."
}

Table projects {
  id bigint [pk, increment]
  name varchar
  owner_id bigint
  start_date date
  end_date date
  status varchar

  Note: "Hlavna entita projektoveho modulu."
}

Table project_team {
  id bigint [pk, increment]
  project_id bigint
  user_id bigint

  Note: "Prepojenie userov na projektovy tim."
}

Table tasks {
  id bigint [pk, increment]
  project_id bigint
  title varchar
  assigned_to bigint
  status varchar

  Note: "Ulohy v ramci projektu."
}

Table time_entries {
  id bigint [pk, increment]
  project_id bigint
  task_id bigint
  user_id bigint
  entry_date date
  hours decimal(5,2)

  Note: "Cas vykazany uzivatelom na task/projekt."
}

Table employee_capacities {
  id bigint [pk, increment]
  user_id bigint
  weekly_capacity_hours int

  Note: "Kapacitny profil pouzivatela."
}

Ref: projects.owner_id > users.id
Ref: project_team.project_id > projects.id
Ref: project_team.user_id > users.id
Ref: tasks.project_id > projects.id
Ref: tasks.assigned_to > users.id
Ref: time_entries.project_id > projects.id
Ref: time_entries.task_id > tasks.id
Ref: time_entries.user_id > users.id
Ref: employee_capacities.user_id > users.id
